# Labworks_cpp

Lab01_WordCount/lib/: WordCount.cpp
Lab01_WordCount/tests/: CMakeLists.txt  tests.cpp
Lab02_uint2022_t/lib/: number.cpp  number.h
Lab03_AbelianSandpileModel_toBMP/: CMakeLists.txt  main.cpp
Lab03_AbelianSandpileModel_toBMP/getoptions/: options.h
Lab03_AbelianSandpileModel_toBMP/lib/: bmp.cpp  table.cpp  table.h
Lab04_HammingCodeArchiver/: main.cpp
Lab04_HammingCodeArchiver/getoptions/: options.h
Lab05_СommandLineArgumentParser/tests/: argparser_test.cpp
Lab06_OMFL_Parser/lib/: parser.cpp
Lab07_MP3_Metadata/: ArgParser.h  main.cpp
Lab07_MP3_Metadata/ID3v2/: ID3v2Parser.cpp  ID3v2Parser.h
Lab08_CircularBuffer/: CMakeLists.txt
Lab08_CircularBuffer/lib/: CircularBuffer.h  CircularBufferExt.h
Lab08_CircularBuffer/tests/: CMakeLists.txt  test_buffer.cpp  test_extbuffer.cpp
Lab09_MemoryPoolsAllocator/lib/: MemoryPoolAllocator.h
Lab10_WeatherForecast/: CMakeLists.txt  config.json  main.cpp
Lab10_WeatherForecast/lib/: TableCreation.cpp  constants.h  functions.cpp  structures.h
Lab11_Algorithms_Xrange_Zip/: CMakeLists.txt
Lab11_Algorithms_Xrange_Zip/lib/: algorithm_lib.h  xrange.h  zip.h
Lab11_Algorithms_Xrange_Zip/tests/: CMakeLists.txt  algorithm_tests.cpp  xrange_tests.cpp  zip_tests.cpp
Lab12_SQL/: CMakeLists.txt  README.md
Lab12_SQL/lib/: CMakeLists.txt  SimpleSQL.cpp  SimpleSQL.h
Lab12_SQL/tests/: CMakeLists.txt  SimpleSQL_tests.cpp
Lab1_WordCount/: README.md
Lab1_WordCount/lib/: WordCount.h
Lab3_AbelianSandpileModel_toBMP/getoptions/: options.cpp
Lab4_HammingCodeArchiver/: CMakeLists.txt
Lab4_HammingCodeArchiver/getoptions/: options.cpp
Lab4_HammingCodeArchiver/lib/: hamarc.cpp  hamarc.h
Lab7_MP3_Metadata/: CMakeLists.txt
Lab9_MemoryPoolsAllocator/: CMakeLists.txt
(+4 files in other folders)
